@@ -30,8 +30,8 @@ public class ScalingHealth {
     public static final String MOD_ID_OLD = "ScalingHealth";
     public static final String MOD_ID_LOWER = "scalinghealth";
     public static final String MOD_NAME = "Scaling Health";
-    public static final String VERSION = "1.3.23";
-    public static final String VERSION_SILENTLIB = "2.3.6";
+    public static final String VERSION = "1.3.24";
+    public static final String VERSION_SILENTLIB = "2.3.17";
     public static final int BUILD_NUM = 0;
     public static final String DEPENDENCIES = "required-after:silentlib@[" + VERSION_SILENTLIB + ",);after:morpheus";
     public static final String ACCEPTED_MC_VERSIONS = "[1.12,1.12.2]";
@@ -43,7 +43,7 @@ public class ScalingHealth {
     public static LogHelper logHelper = new LogHelper(MOD_NAME, BUILD_NUM);
     public static LocalizationHelper localizationHelper;
 
-    public static SRegistry registry = new SRegistry(MOD_ID_LOWER, logHelper);
+    public static SRegistry registry = new SRegistry();
 
     public static CreativeTabs creativeTab = registry.makeCreativeTab(MOD_ID_LOWER, () -> new ItemStack(ModItems.heart));
 
